--- a/app/posts/postPage.module.css
+++ b/app/posts/postPage.module.css
@@ -1,3 +1,30 @@
-.bgRed{
-  background: tomato;
+.bgRed {
+  color: #fff;
+  background-color: #f44336;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.cardContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  justify-items: center;
+}
+
+.card {
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  max-width: 300px;
+}
+
+.card p {
+  margin-bottom: 10px;
+}
+
+.card i {
+  color: #333;
 }
